--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,91 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <ProgressBar
-        android:layout_width="match_parent"
-        android:progressTint="@color/colorPrimary"
         style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
-        android:secondaryProgressTint="@color/colorAccent"
-        android:progress="25"
-        android:secondaryProgress="90"
-        android:indeterminateTint="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:layout_height="wrap_content"
-        />
+        android:indeterminateTint="@color/colorPrimary"
+        android:progress="25"
+        android:progressTint="@color/colorPrimary"
+        android:secondaryProgress="90"
+        android:secondaryProgressTint="@color/colorAccent" />
 
     <ProgressBar
-        android:layout_width="match_parent"
-        android:progressTint="@color/colorPrimary"
         style="@android:style/Widget.Material.Light.ProgressBar"
-        android:secondaryProgressTint="@color/colorAccent"
-        android:indeterminate="false"
-        android:progress="25"
-        android:secondaryProgress="90"
-        android:indeterminateTint="@color/colorPrimary"
-
-        android:layout_height="wrap_content"
-        />
-
-    <ProgressBar
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="false"
+        android:indeterminateTint="@color/colorPrimary"
+        android:progress="25"
         android:progressTint="@color/colorPrimary"
-        style="@android:style/Widget.Holo.Light.ProgressBar.Inverse"
-        android:secondaryProgressTint="@color/colorAccent"
-        android:indeterminate="false"
-        android:progress="25"
         android:secondaryProgress="90"
-        android:indeterminateTint="@color/colorPrimary"
+        android:secondaryProgressTint="@color/colorAccent" />
+
+    <ProgressBar
+        style="@android:style/Widget.Holo.Light.ProgressBar.Inverse"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
-
-    <ProgressBar
-        android:layout_width="match_parent"
-        android:id="@+id/pb1"
-        android:indeterminateDrawable="@drawable/pb1"
-        android:layout_height="wrap_content"/>
-
-    <ProgressBar
-        android:layout_width="match_parent"
-        android:id="@+id/pb2"
-        android:indeterminateDrawable="@drawable/pb2"
-        android:layout_height="wrap_content"/>
-
-    <ProgressBar
-        android:layout_width="match_parent"
-        android:id="@+id/pb3"
-        android:indeterminateDrawable="@drawable/pb3"
-        android:indeterminateDuration="@android:integer/config_longAnimTime"
-        android:layout_height="wrap_content"/>
-
-    <ProgressBar
-        android:layout_width="match_parent"
-        android:id="@+id/pb4"
-        android:indeterminateDrawable="@drawable/pb4"
-        android:layout_height="wrap_content"/>
-
-    <ProgressBar
-        android:layout_width="70dp"
-        android:id="@+id/pb5"
-        android:progressDrawable="@drawable/determinate_pb1"
         android:indeterminate="false"
-        style="?android:progressBarStyleHorizontal"
-        android:progress="20"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="70dp"/>
+        android:indeterminateTint="@color/colorPrimary"
+        android:progress="25"
+        android:progressTint="@color/colorPrimary"
+        android:secondaryProgress="90"
+        android:secondaryProgressTint="@color/colorAccent" />
 
     <ProgressBar
+        android:id="@+id/pb1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminateDrawable="@drawable/pb1" />
+
+    <ProgressBar
+        android:id="@+id/pb2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminateDrawable="@drawable/pb2" />
+
+    <ProgressBar
+        android:id="@+id/pb3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminateDrawable="@drawable/pb3"
+        android:indeterminateDuration="@android:integer/config_longAnimTime" />
+
+    <ProgressBar
+        android:id="@+id/pb4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminateDrawable="@drawable/pb4" />
+
+    <ProgressBar
+        android:id="@+id/pb5"
+        style="?android:progressBarStyleHorizontal"
         android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center_horizontal"
+        android:indeterminate="false"
+        android:progress="20"
+        android:progressDrawable="@drawable/determinate_pb1" />
+
+    <ProgressBar
         android:id="@+id/pb6"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_gravity="center_horizontal"
         android:indeterminateOnly="false"
         android:progressDrawable="@drawable/determinate_pb2"
-        tools:progress="10"
-        android:layout_height="70dp"/>
+        tools:progress="10" />
+
+    <ProgressBar
+        android:id="@+id/pb7"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center_horizontal"
+        android:indeterminateOnly="false"
+        android:progress="50"
+        android:progressDrawable="@drawable/determinate_pb2"
+        android:secondaryProgress="70" />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp">
+
+        <ProgressBar
+            android:id="@+id/circular_determinative_pb"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:indeterminateOnly="false"
+            android:progressDrawable="@drawable/pb_circular_determinative"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:progress="70"
+            tools:secondaryProgress="90"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/progress_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            app:layout_constraintBottom_toBottomOf="@+id/circular_determinative_pb"
+            app:layout_constraintEnd_toEndOf="@+id/circular_determinative_pb"
+            app:layout_constraintStart_toStartOf="@+id/circular_determinative_pb"
+            app:layout_constraintTop_toTopOf="@+id/circular_determinative_pb"
+            tools:text="70%" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </LinearLayout>
